# OpenGL-voxelizer

./: .gitignore  LICENSE  coil.stl  core.stl  example.py  openglvoxelizer.py  pyproject.toml  readme.md
