[project]
name = "opengl-voxelizer"
version = "0.1.0"
description = "An OpenGL .stl slicer in Python for tomographic VAM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pyglet>=2.1.10",
    "pyopengl>=3.1.10",
    "tqdm>=4.67.1",
    "trimesh>=4.9.0",
]
